--- a/content/post/2017/2017-10_Git.md
+++ b/content/post/2017/2017-10_Git.md
@@ -1,9 +1,9 @@
 +++
-title = "Git常用操作"
-description = "Git常用操作"
+title = "Git操作(1)-基础命令"
+description = "Git基础命令"
 date = "2017-10-04"
 categories = ["Tools"]
-tags = ["git","github"]
+tags = ["git","github","tools"]
 thumbnail = ""
 +++
 
@@ -85,8 +85,8 @@ thumbnail = ""
 取消对文件的跟踪，但不删除当前文件    
 `git rm --cached <filename>`
 
-查看历史   
-`git log`
+查看最近的3次提交历史   
+`git log -3`
 
 提交文件到本地  
 `git commit -m '第一次提交'`
@@ -103,6 +103,15 @@ thumbnail = ""
 取消对文件的修改  
 `git checkout -- <filename> `
 
+### 恢复文件
+本地代码跳转到某次提交 
+`git reset --hard HEAD~1`
+
+反转提交，取消历史提交。相当于用一个新提交来消除一个历史提交所做的任何修改。
+恢复 888e26 次提交，使用下面的命令，再push到服务器即可
+`git revert 888e26`
+
+[git reset revert 回退回滚取消提交返回上一版本](http://yijiebuyi.com/blog/8f985d539566d0bf3b804df6be4e0c90.html)  
 
 
 ### 本地分支操作
@@ -124,7 +133,6 @@ git checkout issue53
 
 删除本地分支  
 `git branch -d issue53`
-
 
 
 
@@ -182,7 +190,6 @@ git checkout --track origin/serverfix
 推送所有tag到服务器  
 `git push --tags`
 `git push orign <tag_name>`
-
 
 
 
