--- a/content/post/2017/2017-10_Git.md
+++ b/content/post/2017/2017-10_Git.md
@@ -128,7 +128,7 @@ git checkout issue53
 `git checkout issue53`
 
 合并本地分支  
-`git merge issue53`
+`git merge issue53`  
 
 
 删除本地分支  
@@ -144,8 +144,15 @@ git checkout issue53
 推送本地分支到远程分支 `git push (远程仓库名) (分支名)`  
 `git push origin serverfix`
 
+拉取分支代码
+`git featch origin`
+
 合并远程分支  
 `git merge origin/serverfix`
+
+合并远程分支  
+`git pull origin bugfix` 相当于同时执行`featch`和`merge`
+
 
 从远程分支创建本地分支`git checkout -b [分支名] [远程名]/[分支名]`  
 `git checkout -b serverfix origin/serverfix  
