--- a/content/post/2017/2017-10_Git.md
+++ b/content/post/2017/2017-10_Git.md
@@ -138,6 +138,12 @@ git checkout issue53
 
 ### git远程分支操作
 
+查看远程仓库  
+`git remote -v`
+
+添加远程仓库`git remote add [shortname] [url]`  
+`git remote add pb git://github.com/paulboone/ticgit.git`
+
 同步服务器的数据到本地  
 `git fetch origin `
 
